Fixed filters not showing properly on mobile view (#118)

--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -8,7 +8,7 @@
 }
 
 .device-mobile .mentors-wrapper {
-  transform: translateY(-105px);
+  transform: translateY(-150px);
   transition: transform .3s ease;
 }
 
